# anki-from-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
anki_from_pdf/: __main__.py  anki.py  anki_creation.py  deck_description.py  description.py  pdf.py  utils.py
templates/: template.json  template.py
